...
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Workout"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <Button
            android:id="@+id/workoutItemAddBtn"
            android:layout_width="wrap_content"
...
